--- a/index.html
+++ b/index.html
@@ -10,9 +10,31 @@
 
 </head>
 <body>
-    <h1>Holi</h1>
-    <img src="images/medium-logo-1.svg" alt="" >
-    <img src="images/medium-logo-2.svg" alt="" >
+    <header class="container">
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-4"></div>
+            <nav class="col12"></nav>
+        </div>
+    </header>
+
+    <section class="container">
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+        </div>
+    </section>
+
+    <section class="container">
+        <div class="row">
+            <div class="col-8"></div>
+            <aside class="col-4">
+                <footer></footer>
+            </aside>
+        </div>
+    </section>
+
 
     <!-- jQuery and Popper.js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
