cambios borja por terminar

--- a/index.html
+++ b/index.html
@@ -18,11 +18,67 @@
         </div>
     </header>
 
-    <section class="container">
+    <section class="container wrapper-container-2">
         <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4"></div>
-            <div class="col-4"></div>
+            <div class="col-12 col-md-5">
+                <div class="card" style="w-100 h-25">
+                    <img src="https://picsum.photos/seed/picsum/200/300" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h3>Lorem ipsum dolor sit amet consectetur</h3>
+                      <p class="card-text">by Some quick</p>
+                      <div class="">
+                          <div>
+                            <p class="mb-0">Lorem ipsum dolor sit.</p>
+                            <p>Agu 21 min read</p>
+                          </div>
+                          <div>
+                            <img src="icon-3-dots.svg" alt="" width="100px" height="100px">
+                          </div>
+                          
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <ul class="list-unstyled">
+                    <li class="media">
+                      <img src="https://picsum.photos/200" class="mr-3" alt="...">
+                      <div class="media-body">
+                        <h4 class="mt-0 mb-1">List-based media object</h4>
+                        Cras sit amet nibh libero, in gravida nulla. 
+                      </div>
+                    </li>
+                    <li class="media my-4">
+                      <img src="https://picsum.photos/200" class="mr-3" alt="...">
+                      <div class="media-body">
+                        <h4 class="mt-0 mb-1">List-based media object</h4>
+                        Cras sit amet nibh libero, in gravida nulla. 
+                      </div>
+                    </li>
+                    <li class="media">
+                      <img src="https://picsum.photos/200" class="mr-3" alt="...">
+                      <div class="media-body">
+                        <h4 class="mt-0 mb-1">List-based media object</h4>
+                        Cras sit amet nibh libero, in gravida nulla. 
+                      </div>
+                    </li>
+                  </ul>
+               
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card" style="w-100 h-25">
+                    <img src="https://picsum.photos/seed/picsum/200/300" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h3>Lorem ipsum dolor sit amet consectetur</h3>
+                      <p class="card-text">by Some quick</p>
+                      <div class="">
+                          <p class="mb-0">Lorem ipsum dolor sit.</p>
+                          <p>Agu 21 min read</p>
+                      </div>
+                    </div>
+                  </div>
+
+            </div>
         </div>
     </section>
 
@@ -44,3 +100,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
