--- a/index.html
+++ b/index.html
@@ -10,11 +10,50 @@
 
 </head>
 <body>
+    <nav class="container d-flex flex-column">
+        <div class="row">
+            <div class="col-8 d-flex align-items-center">
+                <img class="d-none d-md-block p-4" src="images/logo desktop - size modified.svg" alt="Logo Desktop">
+                <img class="d-block d-md-none p-4" src="images/logo mobile - size modified.svg" alt="Logo Mobile">
+            </div>
+            <div class="col-4 d-flex align-items-center justify-content-end pr-4">
+                <img class="navimg p-2 mr-2" src="images/search-size modified.svg" alt="search">
+                <img class="navimg p-2 mr-2" src="images/bookmark many- size modified.svg" alt="bookmakmany">
+                <img class="navimg p-2 mr-2" src="images/notify-size modified.svg" alt="notify">
+                <button type="button" class="btn btn-outline-secondary ">Upgrade</button>
+                <p class="signup">L</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <ul class="navul d-flex list-unstyled overflow-auto">
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                    <li class="navli ml-5 mr-2">Lorem</li>
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+
     <header class="container">
         <div class="row">
-            <div class="col-3"></div>
             <div class="col-4"></div>
-            <nav class="col12"></nav>
+            <div class="col-4"></div>
+            <nav class="col-4"></nav>
         </div>
     </header>
 
