--- a/index.html
+++ b/index.html
@@ -58,6 +58,141 @@
             </div>
         </div>
     </nav>
+    <section class="container" id="main-articles">
+        <div class="row">
+            <div class="col-12 col-md-5 feature-article">
+                <div class="card" style="border: none">
+                    <img src="https://picsum.photos/seed/picsum/200/300" class="card-img-top" style="height: 150px;">
+                    <div class="card-body" style="margin-left: 50px;">
+                      <h3 class="article-title">Lorem ipsum dolor sit amet consectetur</h3> 
+                      <p class="card-text" style="color:#757575;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <div class= "main-article-footer d-flex justify-content-between">
+                            <div>
+                                <p class="m-0">Nome Cognome</p>
+                                <div class="">
+                                    <div>
+                                        <p style="color:#757575" data-toggle="tooltip" data-placement="top" title="Updated Ago 21">Agu 16- 5 min read
+                                            <span>
+                                                <svg
+                                                width="15" height="15"><path d="M7.438 2.324c.034-.099.09-.099.123 0l1.2 3.53a.29.29 0 00.26.19h3.884c.11 0 .127.049.038.111L9.8 8.327a.271.271 0 00-.099.291l1.2 3.53c.034.1-.011.131-.098.069l-3.142-2.18a.303.303 0 00-.32 0l-3.145 2.182c-.087.06-.132.03-.099-.068l1.2-3.53a.271.271 0 00-.098-.292L2.056 6.146c-.087-.06-.071-.112.038-.112h3.884a.29.29 0 00.26-.19l1.2-3.52z"></path></svg>
+                                            </span>
+                                        </p>
+                                    </div>    
+                                </div>
+                             </div>
+                             <div>
+                                <span class="svgIcon svgIcon--moreFilled svgIcon--25px is-flushRight"><svg class="svgIcon-use" width="25" height="25"><path d="M5 12.5c0 .552.195 1.023.586 1.414.39.39.862.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414A1.927 1.927 0 007 10.5c-.552 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.617 0c0 .552.196 1.023.586 1.414.391.39.863.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414a1.927 1.927 0 00-1.414-.586c-.551 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.6 0c0 .552.195 1.023.586 1.414.39.39.868.586 1.432.586.551 0 1.023-.195 1.413-.586.391-.39.587-.862.587-1.414 0-.552-.196-1.023-.587-1.414a1.927 1.927 0 00-1.413-.586c-.565 0-1.042.195-1.432.586-.39.39-.586.862-.587 1.414z" fill-rule="evenodd"></path></svg></span>
+                             </div>
+                       </div> 
+                    </div>    
+                </div>
+            </div>   
+            <div class="col-12 col-md-4">
+                <ul class="list-unstyled">
+                    <li class="media" style="margin-bottom: inherit;">
+                        <img src="https://picsum.photos/200" class="mr-3" style="width: 100px; heigth:100px;">
+                        <div class="media-body">
+                          <h4 class="mt-0 mb-1">List-based media object</h4>
+                                  <div>
+                                      <p class="m-0">Nome Cognome</p>
+                                      <div class="d-flex justify-content-between">
+                                          <div>
+                                              <p style="color:#757575" data-toggle="tooltip" data-placement="top" title="Updated Ago 21">Agu 13- 5 min read
+                                                  <span>
+                                                      <svg
+                                                      width="15" height="15"><path d="M7.438 2.324c.034-.099.09-.099.123 0l1.2 3.53a.29.29 0 00.26.19h3.884c.11 0 .127.049.038.111L9.8 8.327a.271.271 0 00-.099.291l1.2 3.53c.034.1-.011.131-.098.069l-3.142-2.18a.303.303 0 00-.32 0l-3.145 2.182c-.087.06-.132.03-.099-.068l1.2-3.53a.271.271 0 00-.098-.292L2.056 6.146c-.087-.06-.071-.112.038-.112h3.884a.29.29 0 00.26-.19l1.2-3.52z"></path></svg>
+                                                  </span>
+                                              </p>
+                                          </div>  
+                                          <div>
+                                              <span class="svgIcon svgIcon--moreFilled svgIcon--25px is-flushRight"><svg class="svgIcon-use" width="25" height="25"><path d="M5 12.5c0 .552.195 1.023.586 1.414.39.39.862.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414A1.927 1.927 0 007 10.5c-.552 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.617 0c0 .552.196 1.023.586 1.414.391.39.863.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414a1.927 1.927 0 00-1.414-.586c-.551 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.6 0c0 .552.195 1.023.586 1.414.39.39.868.586 1.432.586.551 0 1.023-.195 1.413-.586.391-.39.587-.862.587-1.414 0-.552-.196-1.023-.587-1.414a1.927 1.927 0 00-1.413-.586c-.565 0-1.042.195-1.432.586-.39.39-.586.862-.587 1.414z" fill-rule="evenodd"></path></svg></span>
+                                          </div>  
+                                      </div>
+                                  </div>
+                        </div>
+                    </li>
+                    <li class="media" style="margin-bottom: inherit;">
+                        <img src="https://picsum.photos/200" class="mr-3" style="width: 100px; heigth:100px;">
+                        <div class="media-body">
+                          <h4 class="mt-0 mb-1">List-based media object</h4>
+                                  <div>
+                                      <p class="m-0">Nome Cognome</p>
+                                      <div class="d-flex justify-content-between">
+                                          <div>
+                                              <p style="color:#757575" data-toggle="tooltip" data-placement="top" title="Updated Ago 21">Agu 13- 5 min read
+                                                  <span>
+                                                      <svg
+                                                      width="15" height="15"><path d="M7.438 2.324c.034-.099.09-.099.123 0l1.2 3.53a.29.29 0 00.26.19h3.884c.11 0 .127.049.038.111L9.8 8.327a.271.271 0 00-.099.291l1.2 3.53c.034.1-.011.131-.098.069l-3.142-2.18a.303.303 0 00-.32 0l-3.145 2.182c-.087.06-.132.03-.099-.068l1.2-3.53a.271.271 0 00-.098-.292L2.056 6.146c-.087-.06-.071-.112.038-.112h3.884a.29.29 0 00.26-.19l1.2-3.52z"></path></svg>
+                                                  </span>
+                                              </p>
+                                          </div>  
+                                          <div>
+                                              <span class="svgIcon svgIcon--moreFilled svgIcon--25px is-flushRight"><svg class="svgIcon-use" width="25" height="25"><path d="M5 12.5c0 .552.195 1.023.586 1.414.39.39.862.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414A1.927 1.927 0 007 10.5c-.552 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.617 0c0 .552.196 1.023.586 1.414.391.39.863.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414a1.927 1.927 0 00-1.414-.586c-.551 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.6 0c0 .552.195 1.023.586 1.414.39.39.868.586 1.432.586.551 0 1.023-.195 1.413-.586.391-.39.587-.862.587-1.414 0-.552-.196-1.023-.587-1.414a1.927 1.927 0 00-1.413-.586c-.565 0-1.042.195-1.432.586-.39.39-.586.862-.587 1.414z" fill-rule="evenodd"></path></svg></span>
+                                          </div>  
+                                      </div>
+                                  </div>
+                        </div>
+                    </li>
+                    <li class="media" style="margin-bottom: inherit;">
+                        <img src="https://picsum.photos/200" class="mr-3" style="width: 100px; heigth:100px;">
+                        <div class="media-body">
+                          <h4 class="mt-0 mb-1">List-based media object</h4>
+                                  <div>
+                                      <p class="m-0">Nome Cognome</p>
+                                      <div class="d-flex justify-content-between">
+                                          <div>
+                                              <p style="color:#757575" data-toggle="tooltip" data-placement="top" title="Updated Ago 21">Agu 13- 5 min read
+                                                  <span>
+                                                      <svg
+                                                      width="15" height="15"><path d="M7.438 2.324c.034-.099.09-.099.123 0l1.2 3.53a.29.29 0 00.26.19h3.884c.11 0 .127.049.038.111L9.8 8.327a.271.271 0 00-.099.291l1.2 3.53c.034.1-.011.131-.098.069l-3.142-2.18a.303.303 0 00-.32 0l-3.145 2.182c-.087.06-.132.03-.099-.068l1.2-3.53a.271.271 0 00-.098-.292L2.056 6.146c-.087-.06-.071-.112.038-.112h3.884a.29.29 0 00.26-.19l1.2-3.52z"></path></svg>
+                                                  </span>
+                                              </p>
+                                          </div>  
+                                          <div>
+                                              <span class="svgIcon svgIcon--moreFilled svgIcon--25px is-flushRight"><svg class="svgIcon-use" width="25" height="25"><path d="M5 12.5c0 .552.195 1.023.586 1.414.39.39.862.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414A1.927 1.927 0 007 10.5c-.552 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.617 0c0 .552.196 1.023.586 1.414.391.39.863.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414a1.927 1.927 0 00-1.414-.586c-.551 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.6 0c0 .552.195 1.023.586 1.414.39.39.868.586 1.432.586.551 0 1.023-.195 1.413-.586.391-.39.587-.862.587-1.414 0-.552-.196-1.023-.587-1.414a1.927 1.927 0 00-1.413-.586c-.565 0-1.042.195-1.432.586-.39.39-.586.862-.587 1.414z" fill-rule="evenodd"></path></svg></span>
+                                          </div>  
+                                      </div>
+                                  </div>
+                        </div>
+                      </li>
+                  </ul>
+            </div> 
+            <div class="col-12 col-md-3 d-none d-md-block">
+                <div class="card" style="border: none">
+                    <img src="https://picsum.photos/200/300?grayscale" class="card-img-top" style="height: 150px;">
+                    <div class="card-body" style="margin-left: -20px;">
+                      <h3>Lorem ipsum dolor sit amet consectetur</h3> 
+                      <p class="card-text" style="color:#757575;">Some quick example text to build on the card title</p>
+                      <div class= "main-article-footer d-flex justify-content-between">
+                            <div>
+                                <p class="m-0">Nome Cognome</p>
+                                <div class="">
+                                    <div>
+                                        <p style="color:#757575" data-toggle="tooltip" data-placement="top" title="Updated Ago 21">Agu 13- 5 min read
+                                            <span>
+                                                <svg
+                                                width="15" height="15"><path d="M7.438 2.324c.034-.099.09-.099.123 0l1.2 3.53a.29.29 0 00.26.19h3.884c.11 0 .127.049.038.111L9.8 8.327a.271.271 0 00-.099.291l1.2 3.53c.034.1-.011.131-.098.069l-3.142-2.18a.303.303 0 00-.32 0l-3.145 2.182c-.087.06-.132.03-.099-.068l1.2-3.53a.271.271 0 00-.098-.292L2.056 6.146c-.087-.06-.071-.112.038-.112h3.884a.29.29 0 00.26-.19l1.2-3.52z"></path></svg>
+                                            </span>
+                                        </p>
+                                    </div>    
+                                </div>
+                             </div>
+                             <div>
+                                <span class="svgIcon svgIcon--moreFilled svgIcon--25px is-flushRight"><svg class="svgIcon-use" width="25" height="25"><path d="M5 12.5c0 .552.195 1.023.586 1.414.39.39.862.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414A1.927 1.927 0 007 10.5c-.552 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.617 0c0 .552.196 1.023.586 1.414.391.39.863.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414a1.927 1.927 0 00-1.414-.586c-.551 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.6 0c0 .552.195 1.023.586 1.414.39.39.868.586 1.432.586.551 0 1.023-.195 1.413-.586.391-.39.587-.862.587-1.414 0-.552-.196-1.023-.587-1.414a1.927 1.927 0 00-1.413-.586c-.565 0-1.042.195-1.432.586-.39.39-.586.862-.587 1.414z" fill-rule="evenodd"></path></svg></span>
+                             </div>
+                       </div> 
+                    </div>    
+                </div>
+            </div>
+        </div>   
+        <div class="row d-flex justify-content-end border-bottom mb-5 pb-3 cierre" style="margin-right: 50px;" >
+            <div class="d-flex">
+                <a href="#" style="color:#018F69;">SEE EDITOR´S PICKS ></a>
+            </div>
+        </div>
+    </section>  
+        
+
 
     <section class="container" id="article-list">
         <div class="row">
