--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 <body>
     <nav class="container d-flex flex-column">
         <div class="row nav-container1">
-            <div class=" logo col-8 d-flex align-items-center">
+            <div class=" logo col-6 col-md-8 d-flex align-items-center p-0">
                 <img class="d-none d-md-block p-4" src="images/logo desktop - size modified.svg" alt="Logo Desktop">
-                <img class="d-block d-md-none p-4" src="images/logo mobile - size modified.svg" alt="Logo Mobile">
+                <svg class="d-md-none d-block svgIcon-use m-l-4" width="45" height="45">
+                    <path d="M5 40V5h35v35H5zm8.56-12.627c0 .555-.027.687-.318 1.03l-2.457 2.985v.396h6.974v-.396l-2.456-2.985c-.291-.343-.344-.502-.344-1.03V18.42l6.127 13.364h.714l5.256-13.364v10.644c0 .29 0 .342-.185.528l-1.848 1.796v.396h9.19v-.396l-1.822-1.796c-.184-.186-.21-.238-.21-.528V15.937c0-.291.026-.344.21-.528l1.823-1.797v-.396h-6.471l-4.622 11.542-5.203-11.542h-6.79v.396l2.14 2.64c.239.292.291.37.291.768v10.353z">
+                    </path>
+                </svg>
             </div>
-            <div class=" col-4 d-flex align-items-center justify-content-end pr-4">
+            <div class=" col-6 col-md-4 d-flex align-items-center justify-content-end p-0 pr-md-4">
                 <svg class="svgIcon-use" width="25" height="25" >
                     <path d="M20.067 18.933l-4.157-4.157a6 6 0 10-.884.884l4.157 4.157a.624.624 0 10.884-.884zM6.5 11c0-2.62 2.13-4.75 4.75-4.75S16 8.38 16 11s-2.13 4.75-4.75 4.75S6.5 13.62 6.5 11z">
                     </path>
                 </svg>
-                <svg class="svgIcon-use" width="25" height="25" >
+                <svg class="svgIcon-use d-none d-md-inline" width="25" height="25" >
                     <path d="M16 6c1.1 0 2 .9 2 2v13.661h-.012a.5.5 0 01-.118.285.508.508 0 01-.708.03L11.5 17.85l-5.662 4.125a.5.5 0 01-.706-.03.478.478 0 01-.12-.285H5V8c0-1.1.9-2 2-2h9zM6 8v12.636l5.162-3.667a.49.49 0 01.676 0L17 20.637V8c0-.55-.45-1-1-1H7c-.55 0-1 .45-1 1z">
                     </path>
                     <path d="M21 5v13.661h-.012a.5.5 0 01-.118.285.508.508 0 01-.708.03L20 18.858V5c0-.55-.45-1-1-1h-9c-.55 0-1 .45-1 1H8c0-1.1.9-2 2-2h9c1.1 0 2 .9 2 2z">
@@ -31,15 +34,19 @@
                     <path d="M-273.327 423.67l-1.673-1.52v-3.646a5.5 5.5 0 00-6.04-5.474c-2.86.273-4.96 2.838-4.96 5.71v3.41l-1.68 1.553c-.204.19-.32.456-.32.734V427a1 1 0 001 1h3.49a3.079 3.079 0 003.01 2.45 3.08 3.08 0 003.01-2.45h3.49a1 1 0 001-1v-2.59c0-.28-.12-.55-.327-.74zm-7.173 5.63c-.842 0-1.55-.546-1.812-1.3h3.624a1.92 1.92 0 01-1.812 1.3zm6.35-2.45h-12.7v-2.347l1.63-1.51c.236-.216.37-.522.37-.843v-3.41c0-2.35 1.72-4.356 3.92-4.565a4.353 4.353 0 014.78 4.33v3.645c0 .324.137.633.376.85l1.624 1.477v2.373z">
                     </path>
                 </svg>
-                <button type="button" class="btn btn-outline-secondary ">Upgrade</button>
+                <button type="button" class="d-none d-md-inline btn btn-outline-secondary ">Upgrade</button>
                 <p>L</p>
             </div>
         </div>
-        <div class="nav-container2 row">
-            <div class="col-12">
+        <div class="nav-container2 row justify-content-center">
+            <div class="col-2 col-md-1 d-flex justify-content-end">
+                <svg class="svgIcon-use" width="21" height="21">
+                    <path d="M13.402 16.957l-6.478-6.479L13.402 4l.799.71-5.768 5.768 5.768 5.77z" fill-rule="evenodd">
+                    </path>
+                </svg>
+            </div>
+            <div class="col-8 col-md-10">
                 <ul class="navul d-flex list-unstyled overflow-auto ">
-                    <li class="navli ml-5 mr-2">Lorem</li>
-                    <li class="navli ml-5 mr-2">Lorem</li>
                     <li class="navli ml-5 mr-2">Lorem</li>
                     <li class="navli ml-5 mr-2">Lorem</li>
                     <li class="navli ml-5 mr-2">Lorem</li>
@@ -55,14 +62,20 @@
                     <li class="navli ml-5 mr-2">Lorem</li>
                 </ul>
             </div>
+            <div class="col-2 col-md-1 d-flex justify-content-start">
+                <svg class="svgIcon-use" width="21" height="21">
+                    <path d="M8.3 4.2l6.4 6.3-6.4 6.3-.8-.8 5.5-5.5L7.5 5" fill-rule="evenodd">
+                    </path>
+                </svg> 
+            </div>
         </div>
     </nav>
     <section class="container" id="main-articles">
         <div class="row">
-            <div class="col-12 col-md-5 feature-article">
+            <div class="col-12 col-md-6 col-lg-5 feature-article">
                 <div class="card" style="border: none">
                     <img src="https://picsum.photos/seed/picsum/200/300" class="card-img-top" style="height: 150px;">
-                    <div class="card-body" style="margin-left: 50px;">
+                    <div class="card-body" style="margin-left: 50px;"> 
                       <h3 class="article-title">Lorem ipsum dolor sit amet consectetur</h3> 
                       <p class="card-text" style="color:#757575;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <div class= "main-article-footer d-flex justify-content-between">
@@ -86,12 +99,12 @@
                     </div>    
                 </div>
             </div>   
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-6 col-lg-4">
                 <ul class="list-unstyled">
                     <li class="media" style="margin-bottom: inherit;">
                         <img src="https://picsum.photos/200" class="mr-3" style="width: 100px; heigth:100px;">
                         <div class="media-body">
-                          <h4 class="mt-0 mb-1">List-based media object</h4>
+                          <h4 class="mt-0 mb-1 cursor-pointer">List-based media object</h4>
                                   <div>
                                       <p class="m-0">Nome Cognome</p>
                                       <div class="d-flex justify-content-between">
@@ -113,7 +126,7 @@
                     <li class="media" style="margin-bottom: inherit;">
                         <img src="https://picsum.photos/200" class="mr-3" style="width: 100px; heigth:100px;">
                         <div class="media-body">
-                          <h4 class="mt-0 mb-1">List-based media object</h4>
+                          <h4 class="mt-0 mb-1 cursor-pointer">List-based media object</h4>
                                   <div>
                                       <p class="m-0">Nome Cognome</p>
                                       <div class="d-flex justify-content-between">
@@ -135,7 +148,7 @@
                     <li class="media" style="margin-bottom: inherit;">
                         <img src="https://picsum.photos/200" class="mr-3" style="width: 100px; heigth:100px;">
                         <div class="media-body">
-                          <h4 class="mt-0 mb-1">List-based media object</h4>
+                          <h4 class="mt-0 mb-1 cursor-pointer">List-based media object</h4>
                                   <div>
                                       <p class="m-0">Nome Cognome</p>
                                       <div class="d-flex justify-content-between">
@@ -156,7 +169,7 @@
                       </li>
                   </ul>
             </div> 
-            <div class="col-12 col-md-3 d-none d-md-block">
+            <div class="col-12 col-md-3 d-none d-lg-block">
                 <div class="card" style="border: none">
                     <img src="https://picsum.photos/200/300?grayscale" class="card-img-top" style="height: 150px;">
                     <div class="card-body" style="margin-left: -20px;">
@@ -184,25 +197,12 @@
                 </div>
             </div>
         </div>   
-        <div class="row d-flex justify-content-end border-bottom mb-5 pb-3 cierre" style="margin-right: 50px;" >
+        <div class="row d-flex justify-content-md-end justify-content-start border-bottom mb-5 pb-3 cierre" style="margin-right: 50px; margin-left: 5px;" >
             <div class="d-flex">
                 <a href="#" style="color:#018F69;">SEE EDITOR´S PICKS ></a>
             </div>
         </div>
     </section>  
-        
-
-
-
-
-
-
-
-
-
-    
-
-
     <section class="container" id="article-list">
         <div class="row">
             <div class="m-article col-12 col-md-8">
