--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row nav-container1">
             <div class=" logo col-6 col-md-8 d-flex align-items-center p-0">
                 <img class="d-none d-md-block p-4" src="images/logo desktop - size modified.svg" alt="Logo Desktop">
-                <svg class="d-md-none d-block svgIcon-use m-l-4" width="45" height="45">
+                <svg class="d-md-none d-block svgIcon-use m-l-4" width="45" height="45" id="logo-mobile">
                     <path d="M5 40V5h35v35H5zm8.56-12.627c0 .555-.027.687-.318 1.03l-2.457 2.985v.396h6.974v-.396l-2.456-2.985c-.291-.343-.344-.502-.344-1.03V18.42l6.127 13.364h.714l5.256-13.364v10.644c0 .29 0 .342-.185.528l-1.848 1.796v.396h9.19v-.396l-1.822-1.796c-.184-.186-.21-.238-.21-.528V15.937c0-.291.026-.344.21-.528l1.823-1.797v-.396h-6.471l-4.622 11.542-5.203-11.542h-6.79v.396l2.14 2.64c.239.292.291.37.291.768v10.353z">
                     </path>
                 </svg>
@@ -66,7 +66,7 @@
                 <svg class="svgIcon-use" width="21" height="21">
                     <path d="M8.3 4.2l6.4 6.3-6.4 6.3-.8-.8 5.5-5.5L7.5 5" fill-rule="evenodd">
                     </path>
-                </svg> 
+                </svg>
             </div>
         </div>
     </nav>
@@ -152,14 +152,14 @@
                                   <div>
                                       <p class="m-0">Nome Cognome</p>
                                       <div class="d-flex justify-content-between">
-                                          <div>
-                                              <p style="color:#757575" data-toggle="tooltip" data-placement="top" title="Updated Ago 21">Agu 13- 5 min read
-                                                  <span>
-                                                      <svg
-                                                      width="15" height="15"><path d="M7.438 2.324c.034-.099.09-.099.123 0l1.2 3.53a.29.29 0 00.26.19h3.884c.11 0 .127.049.038.111L9.8 8.327a.271.271 0 00-.099.291l1.2 3.53c.034.1-.011.131-.098.069l-3.142-2.18a.303.303 0 00-.32 0l-3.145 2.182c-.087.06-.132.03-.099-.068l1.2-3.53a.271.271 0 00-.098-.292L2.056 6.146c-.087-.06-.071-.112.038-.112h3.884a.29.29 0 00.26-.19l1.2-3.52z"></path></svg>
-                                                  </span>
-                                              </p>
-                                          </div>  
+                                            <div>
+                                                    <p style="color:#757575" data-toggle="tooltip" data-placement="top" title="Updated Ago 21">Agu 13- 5 min read
+                                                            <span>
+                                                                    <svg
+                                                                width="15" height="15"><path d="M7.438 2.324c.034-.099.09-.099.123 0l1.2 3.53a.29.29 0 00.26.19h3.884c.11 0 .127.049.038.111L9.8 8.327a.271.271 0 00-.099.291l1.2 3.53c.034.1-.011.131-.098.069l-3.142-2.18a.303.303 0 00-.32 0l-3.145 2.182c-.087.06-.132.03-.099-.068l1.2-3.53a.271.271 0 00-.098-.292L2.056 6.146c-.087-.06-.071-.112.038-.112h3.884a.29.29 0 00.26-.19l1.2-3.52z"></path></svg>
+                                                            </span>
+                                                    </p>
+                                            </div>
                                           <div>
                                               <span class="svgIcon svgIcon--moreFilled svgIcon--25px is-flushRight"><svg class="svgIcon-use" width="25" height="25"><path d="M5 12.5c0 .552.195 1.023.586 1.414.39.39.862.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414A1.927 1.927 0 007 10.5c-.552 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.617 0c0 .552.196 1.023.586 1.414.391.39.863.586 1.414.586.552 0 1.023-.195 1.414-.586.39-.39.586-.862.586-1.414 0-.552-.195-1.023-.586-1.414a1.927 1.927 0 00-1.414-.586c-.551 0-1.023.195-1.414.586-.39.39-.586.862-.586 1.414zm5.6 0c0 .552.195 1.023.586 1.414.39.39.868.586 1.432.586.551 0 1.023-.195 1.413-.586.391-.39.587-.862.587-1.414 0-.552-.196-1.023-.587-1.414a1.927 1.927 0 00-1.413-.586c-.565 0-1.042.195-1.432.586-.39.39-.586.862-.587 1.414z" fill-rule="evenodd"></path></svg></span>
                                           </div>  
@@ -1068,6 +1068,20 @@
         </div>
     </section>
 
+
+    <!-- <section class="container">
+        <div class="row">
+            <div class="col-12">
+                
+                <div class="tooltip-group">
+                    <div class="tooltip-body w-25 rounded .bg-light p-3
+                    ">Este es el tooltip</div>
+                    <p>Aqui va el autor</p>
+                </div>
+
+            </div>
+        </div>
+    </section> -->
 
     <!-- jQuery and Popper.js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
